--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -10,8 +10,7 @@
   "plugins": [
     "babel",
     "import",
-    "react",
-    "react-hooks"
+    "react"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
@@ -140,8 +139,6 @@
     "react/jsx-uses-vars": 1,
     "react/jsx-uses-react": [2],
     "react/jsx-key": [1],
-    "jsx-quotes": [2, "prefer-double"],
-    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    "jsx-quotes": [2, "prefer-double"]
   }
 }
