--- a/client/package.json
+++ b/client/package.json
@@ -76,7 +76,7 @@
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-declaration-strict-value": "^1.1.2",
-    "terser-webpack-plugin": "^1.2.2",
+    "terser-webpack-plugin": "^1.4.5",
     "url": "^0.11.0",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
@@ -101,7 +101,6 @@
     "stylus": "^0.54.8",
     "stylus-loader": "^4.1.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack-dev-server": "^3.10.3",
-    "workbox-webpack-plugin": "^5.1.4"
+    "webpack-dev-server": "^3.10.3"
   }
 }
