--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ lerna-debug.log*
 # Dependency directories
 node_modules/
 jspm_packages/
+client/node_modules/
 
 # TypeScript v1 declaration files
 typings/
