--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
+    "build": "cd client && npm run build",
+    "install-client": "npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
     "start": "nodemon index.js",
     "lint": "npx eslint . --quiet --cache -- && echo \"Your code in \\033[;32m$npm_package_name\\033[0m is clear\"",
     "lint:fix": "npx eslint --ext=js --quiet --cache --fix ."
