--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "medium-psy-server",
   "version": "0.0.1",
   "private": false,
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "build": "cd client && npm run build",
     "install-client": "npm install",
