--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.jsx",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.dev.config.js --progress --profile --colors",
-    "build": "./node_modules/webpack/bin/webpack.js --config webpack.prod.config.js --bail --no-colors",
+    "build": "webpack --config webpack.prod.config.js --bail --no-colors",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint ./src --ext=js,jsx --quiet --cache -- && echo \"[$npm_package_name]: \\033[;32mFINE\\033[0m\"",
     "lint:fix": "npx eslint ./src --ext=js,jsx --quiet --cache --fix -- && echo \"[$npm_package_name]: \\033[;32mFIXED\\033[0m\""
