--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "cd client && npm run build",
-    "install-client": "npm install",
+    "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "start": "nodemon index.js",
     "lint": "npx eslint . --quiet --cache -- && echo \"Your code in \\033[;32m$npm_package_name\\033[0m is clear\"",
